code_analysis/src/jobs/fuzz_4677095_2.stderr
[?1034h[?1034h[?1034hmv: cannot stat ‘indir/’: No such file or directory
WARNING: underlay of /etc/localtime required more than 50 (102) bind mounts
WARNING: underlay of /etc/localtime required more than 50 (102) bind mounts
WARNING: underlay of /etc/localtime required more than 50 (102) bind mounts
In file included from STD_RESSOURCE.c:17:
./POUS.c:36:4: error: expected ';' after top level declarator
RUE));
   ^
   ;
./POUS.c:37:5: error: extraneous closing brace ('}')
    }
    ^
./POUS.c:38:5: error: expected identifier or '('
    else {
    ^
./POUS.c:43:3: error: extraneous closing brace ('}')
  };
  ^
./POUS.c:44:3: error: expected identifier or '('
  if ((__GET_LOCATED(data__->REACTORMODE,) != 4)) {
  ^
./POUS.c:48:3: error: expected identifier or '('
  goto __end;
  ^
./POUS.c:50:6: error: expected ';' after top level declarator
__end:
     ^
     ;
./POUS.c:51:3: error: expected identifier or '('
  return;
  ^
./POUS.c:52:1: error: extraneous closing brace ('}')
} // AUTOMATEDREACTORCONTROL_body__() 
^
9 errors generated.
WARNING: underlay of /etc/localtime required more than 50 (102) bind mounts
In file included from STD_RESSOURCE.c:17:
./POUS.c:36:4: error: expected ';' after top level declarator
RUE));
   ^
   ;
./POUS.c:37:5: error: extraneous closing brace ('}')
    }
    ^
./POUS.c:38:5: error: expected identifier or '('
    else {
    ^
./POUS.c:43:3: error: extraneous closing brace ('}')
  };
  ^
./POUS.c:44:3: error: expected identifier or '('
  if ((__GET_LOCATED(data__->REACTORMODE,) != 4)) {
  ^
./POUS.c:48:3: error: expected identifier or '('
  goto __end;
  ^
./POUS.c:50:6: error: expected ';' after top level declarator
__end:
     ^
     ;
./POUS.c:51:3: error: expected identifier or '('
  return;
  ^
./POUS.c:52:1: error: extraneous closing brace ('}')
} // AUTOMATEDREACTORCONTROL_body__() 
^
9 errors generated.
